--- a/referencer/package.json
+++ b/referencer/package.json
@@ -9,20 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/button": "^2.2.23",
+    "@heroui/system": "^2.4.19",
+    "@heroui/theme": "^2.4.19",
     "@prisma/adapter-neon": "^6.12.0",
     "@prisma/client": "^6.12.0",
     "better-auth": "^1.3.0",
+    "framer-motion": "^12.23.6",
     "next": "15.4.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "next-themes": "^0.4.6",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "^18.3.1",
     "prisma": "^6.12.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5"
   }
 }
