--- a/referencer/package.json
+++ b/referencer/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@daveyplate/better-auth-ui": "^2.1.0",
     "@prisma/adapter-neon": "^6.12.0",
     "@prisma/client": "^6.12.0",
-    "better-auth": "1.2.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "better-auth": "1.3.3",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.525.0",
     "next": "15.4.1",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
@@ -25,6 +31,7 @@
     "@types/react-dom": "^19",
     "prisma": "^6.12.0",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.5",
     "typescript": "^5"
   }
 }
