feat: implement clip saving functionality with UI and API integration

--- a/extension/tsconfig.json
+++ b/extension/tsconfig.json
@@ -9,10 +9,13 @@
     "./**/*.tsx"
   ],
   "compilerOptions": {
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "paths": {
       "~*": [
         "./*"
+      ],
+      "utils/*": [
+        "./utils/*"
       ]
     },
     "baseUrl": "."
