--- a/extension/package.json
+++ b/extension/package.json
@@ -25,7 +25,11 @@
   },
   "manifest": {
     "host_permissions": [
-      "https://*/*"
+      "https://*/*",
+      "http://localhost:3000/"
+    ],
+    "permissions": [
+      "cookies"
     ]
   }
 }
