--- a/referencer/package.json
+++ b/referencer/package.json
@@ -17,6 +17,7 @@
     "better-auth": "1.3.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.9",
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
     "next-themes": "^0.4.6",
